--- a/DAY1/OU_GenAI_LLM_Jan26_1.ipynb
+++ b/DAY1/OU_GenAI_LLM_Jan26_1.ipynb
@@ -1319,11 +1319,496 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "7f5b7841-be77-4550-994d-0b0eb458601e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array(['bad', 'food', 'good'], dtype='<U4')]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import numpy as np\n",
+    "\n",
+    "data = np.array([['food'],['good'],['bad']])\n",
+    "\n",
+    "encoder_obj = OneHotEncoder(sparse_output=False)\n",
+    "encoded = encoder_obj.fit_transform(data)\n",
+    "print(encoder_obj.categories_)\n",
+    "encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "4a4599ae-e849-4b82-93dd-19466e4846db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39cccb8f-84c5-411e-86fa-b6806ca62ccd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Bag of words(BOW)\n",
+    "===================\n",
+    "|-> word -->vector[1,2,3]\n",
+    "\n",
+    "|-> word frequency \n",
+    "|-> not word order/grammar\n",
+    "\n",
+    "Bag - contains list of item(token)\n",
+    "====\n",
+    "doc1: i likes nlp and i likes python\n",
+    "doc2: python and nlp course\n",
+    "\n",
+    "[i,likes,nlp,and,python,course] <== doc1+doc2 - unique words\n",
+    "\n",
+    "n=6\n",
+    "doc1 \n",
+    "====\n",
+    "word  - Count\n",
+    "i    - 2\n",
+    "likes - 2\n",
+    "nlp - 1\n",
+    "and - 1\n",
+    "python - 1\n",
+    "course - 0\n",
+    "\n",
+    "[2,2,1,1,1,0] - doc1 vector \n",
+    "\n",
+    "doc2\n",
+    "----\n",
+    "word - count\n",
+    "i - 0\n",
+    "likes - 0\n",
+    "nlp - 1\n",
+    "and - 1\n",
+    "python - 1\n",
+    "course - 1\n",
+    "[0,0,1,1,1,1] -- doc2 vector \n",
+    "\n",
+    "|\n",
+    "Word2Vector -- capture sematic meaning\n",
+    "    hello -->[1.2,0.2,1,2]\n",
+    "    hi --->[1.3,0.1,2,3]\n",
+    "    banana --->[5,6.2,4.2] \n",
+    "\n",
+    "food - [food,dinner,dosa,.....]\n",
+    "book - [book,notes,....]\n",
+    "         =======================//\n",
+    "\n",
+    "I likes ......  <== predict the next word - NLP - Ngrams\n",
+    "\n",
+    "P(AI |likes ) = 0.6\n",
+    "P(dosa|likes) = 0.3\n",
+    "So --> AI <== 0.6 \n",
+    "\n",
+    "I likes AI\n",
+    "---------------------\n",
+    "Limited context \n",
+    "Data sparsity \n",
+    "Size of N\n",
+    "-------------------\n",
+    "N-gram model\n",
+    "-------------\n",
+    "count-based -- fixed window(n=1,2,3,4,5,6,..N)  Vs LLM - LargetContext(1000's of token)\n",
+    "sparse vectors                                     |->Dense embeddings\n",
+    "No Semantics                                       |->Semantic understanding\n",
+    "\n",
+    "vocs = 3 - food good bad                           |->Dense vector - 300dims \n",
+    "see no'of 0s - not matching                         [0.12,0.23,-0.34,0.33]\n",
+    "[[0., 1., 0.],\n",
+    "[0., 0., 1.],                         \n",
+    "[1., 0., 0.]])\n",
+    "\n",
+    "vocs = 50,000 words\n",
+    "see no'of 0s \n",
+    "Mostly zero = sparse "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0135a5bf-462e-4472-801b-269bea4fb190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C:\\Users\\karth>ollama --version\n",
+    "ollama version is 0.14.3\n",
+    "\n",
+    "C:\\Users\\karth>ollama -v\n",
+    "ollama version is 0.14.3\n",
+    "\n",
+    "C:\\Users\\karth>ollama list # list of loaded model in my local system\n",
+    "NAME    ID    SIZE    MODIFIED\n",
+    "\n",
+    "C:\\Users\\karth>ollama pull nomic-embed-text:latest\n",
+    "pulling manifest\n",
+    "pulling 970aa74c0a90: 100% ▕██████████████████▏ 274 MB\n",
+    "pulling c71d239df917: 100% ▕██████████████████▏  11 KB\n",
+    "pulling ce4a164fc046: 100% ▕██████████████████▏   17 B\n",
+    "pulling 31df23ea7daa: 100% ▕██████████████████▏  420 B\n",
+    "verifying sha256 digest\n",
+    "writing manifest\n",
+    "success\n",
+    "\n",
+    "C:\\Users\\karth>ollama pull gemma2:2b\n",
+    "pulling manifest\n",
+    "pulling 7462734796d6: 100% ▕██████████████████▏ 1.6 GB\n",
+    "pulling e0a42594d802: 100% ▕██████████████████▏  358 B\n",
+    "pulling 097a36493f71: 100% ▕██████████████████▏ 8.4 KB\n",
+    "pulling 2490e7468436: 100% ▕██████████████████▏   65 B\n",
+    "pulling e18ad7af7efb: 100% ▕██████████████████▏  487 B\n",
+    "verifying sha256 digest\n",
+    "writing manifest\n",
+    "success\n",
+    "\n",
+    "C:\\Users\\karth>ollama list\n",
+    "NAME                       ID              SIZE      MODIFIED\n",
+    "gemma2:2b                  8ccf136fdd52    1.6 GB    About a minute ago\n",
+    "nomic-embed-text:latest    0a109f422b47    274 MB    3 minutes ago\n",
+    "\n",
+    "C:\\Users\\karth>\n",
+    "\n",
+    "C:\\Users\\karth>ollama run nomic-embed-text:latest\n",
+    "Error: embedding models require input text. Usage: ollama run nomic-embed-text:latest \"your text here\"\n",
+    "\n",
+    "C:\\Users\\karth>ollama run nomic-embed-text:latest hello\n",
+    "[0.017860368,-0.005880318,-0.17529128,-0.013721276,0.03403859,0.044752814,0.012422824,-0.0025509228,\n",
+    " -0.014760505,-0.03928757,-0.009200146,0.051717155,0.05771218,0.057226323,0.045014214,-0.05359758,\n",
+    " 0.028783012,-0.047195476,-0.039058723,0.026992228,0.009364105,\n",
+    " -0.06674605,0.004949517,-0.0058987713,0.17222914,-0.004382981..]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "664f8e29-8e0f-4113-935e-46fd2d2b56a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Commandline \n",
+    "pip install -r requirements.txt\n",
+    "\n",
+    "in JupyterCell\n",
+    "! pip install -r requirements.txt\n",
+    "\n",
+    "Refer:\n",
+    "https://github.com/Palanikarthikeyan/OU_GenAI_LLM_Jan26/blob/main/DAY1/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "9f7dd528-ee85-4f34-8b91-d513f7ecef21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama import OllamaLLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0219f443-10f8-405a-9e57-e93887577f37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_ollama.llms.OllamaLLM'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(OllamaLLM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8481a0a3-f471-400d-828c-f805d8be42a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langchain_ollama/\n",
+    "            |___llms.py\n",
+    "                   |-------->class OllamaLLM:\n",
+    "                                    ....\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4246c53-4d1b-4d5f-83d1-3e5ca57ee34a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_obj = OllamaLLM(model='model_name')\n",
+    "\n",
+    "llm_obj.invoke('User Query?') -> result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc6eb256-74b6-4c43-8661-3b4541299038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "In Command Prompt\n",
+    "==================\n",
+    "set OLLAMA_HOST=127.0.0.1:11435\n",
+    "ollama serve \n",
+    "|\n",
+    "Listening on:127.0.0.1:11435\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "43823ad5-b1a6-400e-83b8-a4835f5b2ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(OllamaLLM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d53a7a81-780c-4290-ad73-6bf8bbf857e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'> 2585\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_ollama import OllamaLLM\n",
+    "llm_obj = OllamaLLM(model='gemma2:2b')\n",
+    "result = llm_obj.invoke('what is genAI?')\n",
+    "print(type(result),len(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c3c33ae5-43f4-4a18-8087-3169117ce1bb",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Generative AI** is a subfield of artificial intelligence (AI) that focuses on creating new content, including text, images, audio, video, and code, based on learned patterns from existing data. \n",
+      "\n",
+      "Here's a breakdown:\n",
+      "\n",
+      "**Key Characteristics:**\n",
+      "\n",
+      "* **Creativity & Generation:**  Unlike traditional AI systems that focus on analysis or prediction, generative AI can produce original outputs like writing stories, generating artwork, composing music, or even designing software programs.\n",
+      "* **Data-Driven Learning:**  Generative AI models are trained on massive datasets of existing content (text, images, code, etc.). This allows them to learn the underlying patterns and structures within that data.\n",
+      "* **Automation & Efficiency:** By automating the creation process, generative AI can save time and effort for human creators, allowing them to focus on higher-level tasks like concept development and fine-tuning.\n",
+      "\n",
+      "**Types of Generative AI Models:**\n",
+      "\n",
+      "* **Text Generation:** GPT-3, LaMDA (Language Model for Dialogue Applications), BERT\n",
+      "* **Image Generation:** DALL-E 2, Stable Diffusion, Midjourney\n",
+      "* **Audio Generation:** Jukebox (music composition)\n",
+      "* **Video & Code Generation:**  Growing rapidly with advancements in AI research.\n",
+      "\n",
+      "**Applications of Generative AI:**\n",
+      "\n",
+      "The possibilities for generative AI are vast and continue to grow:\n",
+      "\n",
+      "* **Content Creation:** Writing articles, generating social media content, designing marketing materials, creating music and art\n",
+      "* **Research and Development:** Simulating complex systems, accelerating scientific discovery, developing new medical treatments\n",
+      "* **Education:** Personalized learning experiences, interactive simulations, automated grading \n",
+      "* **Entertainment:**  Interactive storytelling games, AI-generated movie scripts\n",
+      "* **Business:** Generating customer service chatbots, automating internal tasks\n",
+      "\n",
+      "\n",
+      "**Ethical Considerations:**\n",
+      "\n",
+      "While incredibly powerful, generative AI raises ethical concerns:\n",
+      "\n",
+      "* **Bias and Fairness:** Training data can contain biases, leading to the creation of biased outputs. \n",
+      "* **Misinformation & Fake Content:**  Generated content can be manipulated to create false or misleading information. \n",
+      "* **Copyright and Ownership:** Questions surrounding ownership of creations generated by AI systems are still being debated.\n",
+      "\n",
+      "\n",
+      "**The Future of Generative AI:**\n",
+      "\n",
+      "Generative AI is a rapidly developing field with enormous potential to revolutionize how we work, play, learn, and experience the world.  As the technology continues to advance, we can expect even more creative and innovative applications in the future. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "77d9e9f3-7310-4158-9f3e-fc7cd6f93768",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```cpp\n",
+      "#include <iostream>\n",
+      "\n",
+      "using namespace std;\n",
+      "\n",
+      "// Function to calculate factorial using recursion\n",
+      "int factorial(int n) {\n",
+      "    if (n == 0) { // Base case: Factorial of 0 is 1\n",
+      "        return 1;\n",
+      "    } else {\n",
+      "        return n * factorial(n - 1); // Recursive step: Multiply n by the factorial of (n-1)\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "int main() {\n",
+      "    int num;\n",
+      "\n",
+      "    cout << \"Enter a non-negative integer: \";\n",
+      "    cin >> num;\n",
+      "\n",
+      "    if (num < 0) { // Error handling for negative input\n",
+      "        cout << \"Factorial is undefined for negative numbers.\" << endl;\n",
+      "    } else {\n",
+      "        cout << \"The factorial of \" << num << \" is \" << factorial(num) << endl;\n",
+      "    }\n",
+      "\n",
+      "    return 0;\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "**Explanation:**\n",
+      "\n",
+      "1. **Include header:** `#include <iostream>` for input/output operations.\n",
+      "2. **Namespace:** `using namespace std;` to avoid writing `std::` repeatedly.\n",
+      "3. **`factorial` Function:**\n",
+      "   - Takes an integer `n` as input.\n",
+      "   - Uses recursion:\n",
+      "     - Base case: If `n` is 0, return 1 (factorial of 0 is 1).\n",
+      "     - Recursive step: Otherwise, multiply `n` by the factorial of `n - 1`.\n",
+      "4. **`main` Function:**\n",
+      "   - Prompts the user to enter a non-negative integer.\n",
+      "   - Reads the input into variable `num`.\n",
+      "   - Handles negative input with an error message.\n",
+      "   - If input is valid:\n",
+      "     - Calls the `factorial` function to calculate the factorial.\n",
+      "     - Prints the result using `cout`.\n",
+      "\n",
+      "**How the Recursion Works:**\n",
+      "\n",
+      "- For example, if you call `factorial(5)`, it does this:\n",
+      "    1. `5 * factorial(4)` \n",
+      "    2. `5 * (4 * factorial(3))` \n",
+      "    3. `5 * (4 * (3 * factorial(2)))`\n",
+      "    4. ... and so on, until it reaches the base case of `factorial(0)`, where it returns 1. The results then get multiplied back up through the recursive calls, giving you the final answer: 5! = 120.\n",
+      "\n",
+      "**Key Concepts:**\n",
+      "\n",
+      "- **Recursion:** A technique where a function calls itself to solve smaller subproblems of the same type.\n",
+      "- **Base case:** The stopping condition for recursion (needed in factorial).\n",
+      "- **Recursive step:** The part of the function that calls itself with a slightly modified input (e.g., subtracting 1).\n",
+      "\n",
+      "**Error Handling:**\n",
+      "\n",
+      "It's crucial to include error handling in your program, especially when dealing with user input:\n",
+      "   - Check if the entered number is actually non-negative.\n",
+      "   - If negative, provide an informative message.  \n",
+      "\n",
+      "\n",
+      "\n",
+      "Let me know if you want to explore different ways of calculating factorial (using iteration or a more optimized version). \n"
+     ]
+    }
+   ],
+   "source": [
+    "result = llm_obj.invoke('How to write factorial program in C++')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c9445649-210c-4799-8657-f29c28e1fbce",
+   "metadata": {},
+   "source": [
+    "llm = OllamaLLM(model='lamma') \n",
+    "llm.invoke(\"what is AI?\")\n",
+    "ResponseError: model 'lamma' not found (status code: 404)\n",
+    "|\n",
+    "Check - commandline --> ollama list "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a940164c-5002-41d5-8355-312dcdde1350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###"
+   ]
   }
  ],
  "metadata": {
