--- a/DAY1/OU_GenAI_LLM_Jan26_1.ipynb
+++ b/DAY1/OU_GenAI_LLM_Jan26_1.ipynb
@@ -1809,6 +1809,235 @@
    "source": [
     "###"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af98734-1b9e-42eb-9088-cb792ff2571a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1984 --- Q: PM of india     ----|        |\n",
+    "         A: .....            ---| modelA |   <== User Ask Query - Who is the PM of India?\n",
+    " ...\n",
+    "\n",
+    "2026                <== User Ask Query - Who is the PM of India?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab811b25-c678-4f67-b145-3d5bcb599843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Load our dataset \n",
+    "document loading - class - get the document - metdata - info about loaded data + actual data (page_content)\n",
+    "\n",
+    "from langchain_community.document_loaders import TextLoader\n",
+    "TextLoader('input_file.txt') ->loader_object\n",
+    "\n",
+    "loader_object.load() -> documents = metadata + page_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "d0ba28a3-b2dd-409b-83ca-39d0094f05ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.document_loaders.text.TextLoader at 0x1e3803c9e80>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import TextLoader\n",
+    "TextLoader('my_docs.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b8e9cccc-f952-472d-bb7b-28f065c9d85c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': 'my_docs.txt'}, page_content=\"LangChain is a framework for developing applications powered by large language models (LLMs).\\n\\nLangChain simplifies every stage of the LLM application lifecycle:\\n\\nDevelopment: Build your applications using LangChain's open-source components and third-party integrations. Use LangGraph to build stateful agents with first-class streaming and human-in-the-loop support.\\nProductionization: Use LangSmith to inspect, monitor and evaluate your applications, so that you can continuously optimize and deploy with confidence.\\nDeployment: Turn your LangGraph applications into production-ready APIs and Assistants with LangGraph Platform.\\n\\nfactorial value 5! is 120\")]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loader_obj = TextLoader('my_docs.txt')\n",
+    "loader_obj.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "1d823309-854e-4150-a652-b81dc6d140a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader_obj = TextLoader('my_docs.txt')\n",
+    "Text_docs = loader_obj.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5d6857d0-31aa-4383-9501-52581f8921a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "loader_obj = PyPDFLoader('attention.pdf')\n",
+    "pdf_docs = loader_obj.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "e8b25dd3-8a43-484a-b224-c79b654cc628",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Document(metadata={'source': 'my_docs.txt'}, page_content=\"LangChain is a framework for developing applications powered by large language models (LLMs).\\n\\nLangChain simplifies every stage of the LLM application lifecycle:\\n\\nDevelopment: Build your applications using LangChain's open-source components and third-party integrations. Use LangGraph to build stateful agents with first-class streaming and human-in-the-loop support.\\nProductionization: Use LangSmith to inspect, monitor and evaluate your applications, so that you can continuously optimize and deploy with confidence.\\nDeployment: Turn your LangGraph applications into production-ready APIs and Assistants with LangGraph Platform.\\n\\nfactorial value 5! is 120\")]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Text_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1926a131-9b44-4508-916f-d2ee9d161117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(pdf_docs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "5f220c27-93b6-40f1-86e5-beab966b4954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pdf_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "e672cbdf-dd12-4f47-903b-e407a7d94b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import WebBaseLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "3690ce50-a32c-42c6-8fd4-b0c3cb5b65cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': 'https://www.google.com', 'title': 'Google', 'language': 'en-IN'}, page_content='GoogleSearch Images Maps Play YouTube News Gmail Drive More »Web History | Settings | Sign in\\xa0Advanced searchGoogle offered in:  हिन्दी বাংলা తెలుగు मराठी தமிழ் ગુજરાતી ಕನ್ನಡ മലയാളം ਪੰਜਾਬੀ AdvertisingBusiness SolutionsAbout GoogleGoogle.co.in© 2026 - Privacy - Terms')]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# WebBaseLoader(web_path='URL') ->web_loader_obj.load()\n",
+    "web_loader = WebBaseLoader(web_path='https://www.google.com')\n",
+    "web_loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d94caf-c7b0-4212-bad2-fc815e946ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import WikipediaLoader\n",
+    "# WikipediaLoader(query='Question') ->loader_obj.load() ->data\n",
+    "#\n",
+    "# WikipediaLoader(query=Question,load_max_docs=<count>) ->loader_obj.load() -->data\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a9bbd8a0-da18-49d4-8da2-6cb923c9d124",
+   "metadata": {},
+   "source": [
+    "from langchain_community.document_loaders import WikipediaLoader\n",
+    "loader_obj = WikipediaLoader(query=\"What is AgenticAI?\")\n",
+    "result = loader_obj.load()\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b6b6e7a-3217-4260-9192-e1c5f838f04c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import <Select_Loader_Name> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e308d0f-ae6e-4256-9d35-71a1760a21fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##################   End of Day1 Session #####################"
+   ]
   }
  ],
  "metadata": {
